Buy card and Images slides + payment method + login google + ngrok + cart

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_MP_ACCESS_TOKEN = TEST-605317394854439-041715-ed345146e0127fe79005bb15a6cadb25-54030146
-VITE_MP_PUBLIC_KEY = TEST-b1af6e00-934c-4dc6-90f9-05ac0cebd173
-VITE_API_URL = https://ac3c-170-233-7-189.ngrok-free.app/api
+VITE_MP_ACCESS_TOKEN =APP_USR-605317394854439-041715-7fc38fd9f1fc0d7b901807cf942430e2-54030146
+VITE_MP_PUBLIC_KEY =APP_USR-f0ec964c-95d5-4ce8-a6c5-b743528b5658
+VITE_MP_APPLICATION_ID=605317394854439
+VITE_API_URL=http://127.0.0.1:8000/api
 VITE_GOOGLE_CLIENT_ID=1008652749842-ccgaoo6tc8n9lvrofed995pmiqakn7i3.apps.googleusercontent.com
