--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ VITE_MP_ACCESS_TOKEN =APP_USR-605317394854439-041715-7fc38fd9f1fc0d7b901807cf942
 VITE_MP_PUBLIC_KEY =APP_USR-f0ec964c-95d5-4ce8-a6c5-b743528b5658
 VITE_MP_APPLICATION_ID=605317394854439
 VITE_API_URL=https://bodechiqueadmindjango.onrender.com/api
-VITE_API_URL_CLEAR=http://127.0.0.1:8000
+VITE_API_URL_CLEAR=https://bodechiqueadmindjango.onrender.com
 VITE_GOOGLE_CLIENT_ID=1008652749842-ccgaoo6tc8n9lvrofed995pmiqakn7i3.apps.googleusercontent.com
